deployment/http-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: http-server
  name: http-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: http-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      labels:
        io.kompose.network/tiktokimmersion-assignment-default: "true"
        io.kompose.service: http-server
    spec:
      containers:
        - env:
            - name: SERVICE_NAME
              value: http-server
            - name: SERVICE_TAGS
              value: http
          image: jaylinlee/tiktok-project:tiktok-assignment-http
          name: http-server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
