deployment/rpc-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rpc-server
  name: rpc-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rpc-server
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/tiktokimmersion-assignment-default: "true"
        io.kompose.service: rpc-server
    spec:
      containers:
        - env:
            - name: SERVICE_NAME
              value: rpc-server
            - name: SERVICE_TAGS
              value: rpc
          image: jaylinlee/tiktok-project:tiktok-assignment-rpc
          name: rpc-server
          ports:
            - containerPort: 8888
          resources: {}
      restartPolicy: Always
status: {}
