deployment/http-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: http-server
  name: http-server
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: http-server
status:
  loadBalancer: {}
