deployment/rpc-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rpc-server
  name: rpc-server
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    io.kompose.service: rpc-server
status:
  loadBalancer: {}
