deployment/tiktokimmersion-assignment-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: tiktokimmersion-assignment-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/tiktokimmersion-assignment-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tiktokimmersion-assignment-default: "true"
